# top-songs-qdrant-master

./: README.md
top-songs-backend/: pyproject.toml
top-songs-backend/top_songs_backend/config/: config.py  test.py
top-songs-backend/top_songs_backend/models/: album.py  artist.py  format.py  genre.py  length.py  producer.py  top_song.py  weeks.py  writer.py
top-songs-backend/top_songs_backend/services/: ingest_documents.py  service.py  text_keyword_searcher.py
top-songs-frontend/: package-lock.json  package.json
